--- a/_posts/rn/component/2016-05-25-rn-Hello.md
+++ b/_posts/rn/component/2016-05-25-rn-Hello.md
@@ -1,9 +1,9 @@
 ---
 layout: post
-title: React
-date: 2015-05-25
-excerpt: "React JSX实战"
-tags: [React]
+title: ReactNative
+date: 2016-05-25
+excerpt: "ReactNative 学习笔记 初战"
+tags: [ReactNative]
 comments: true
 ---
 
