--- a/_posts/rn/component/2016-05-25-rn-Hello.md
+++ b/_posts/rn/component/2016-05-25-rn-Hello.md
@@ -1,9 +1,9 @@
 ---
 layout: post
-title: ReactNative
+title: ReactNative 学习笔记 初战
 date: 2016-05-25
 excerpt: "ReactNative 学习笔记 初战"
-tags: [ReactNative]
+tags: [ReactNative,学习笔记]
 comments: true
 ---
 
