--- a/_posts/project/2016-10-28-ZenTalk.md
+++ b/_posts/project/2016-10-28-ZenTalk.md
@@ -129,8 +129,8 @@ webview缓存跟服务器配置有关，一般webview设定后就可以支援断
     
     其他同类库
     
-       - android-async-http
-       - okhttp
+    - android-async-http
+    - okhttp
 
 - json数据解析使用组件 [fastjson](https://github.com/alibaba/fastjson)
     
@@ -138,8 +138,8 @@ webview缓存跟服务器配置有关，一般webview设定后就可以支援断
     
     其他同类库
     
-       - [Gson](https://github.com/google/gson)
-       - [Jackson](https://github.com/FasterXML/jackson)
+    - [Gson](https://github.com/google/gson)
+    - [Jackson](https://github.com/FasterXML/jackson)
 
 
 - ImagePicker
@@ -152,11 +152,11 @@ webview缓存跟服务器配置有关，一般webview设定后就可以支援断
     - [https://github.com/donglua/PhotoPicker](https://github.com/donglua/PhotoPicker "https://github.com/donglua/PhotoPicker")
     - GalleryFinal
     
-        自定义相册，实现了拍照、图片选择（单选/多选）、 裁剪（单/多裁剪）、旋转、
+      - 自定义相册，实现了拍照、图片选择（单选/多选）、 裁剪（单/多裁剪）、旋转、
        
-        ImageLoader无绑定任由开发者选 择、功能可配置、主题样式可配置。GalleryFinal为你定制相册。
+      - ImageLoader无绑定任由开发者选 择、功能可配置、主题样式可配置。GalleryFinal为你定制相册。
     
-        [https://github.com/pengjianbo/GalleryFinal](https://github.com/pengjianbo/GalleryFinal)
+      - [https://github.com/pengjianbo/GalleryFinal](https://github.com/pengjianbo/GalleryFinal)
 
 - ViewPager
     项目transition过渡控件ViewPagerIndicator [https://github.com/JakeWharton/ViewPagerIndicator](https://github.com/JakeWharton/ViewPagerIndicator)
