--- a/_posts/project/2016-10-28-ZenTalk.md
+++ b/_posts/project/2016-10-28-ZenTalk.md
@@ -151,12 +151,9 @@ webview缓存跟服务器配置有关，一般webview设定后就可以支援断
     - [https://github.com/lovetuzitong/MultiImageSelector ](https://github.com/lovetuzitong/MultiImageSelector  "https://github.com/lovetuzitong/MultiImageSelector ")
     - [https://github.com/donglua/PhotoPicker](https://github.com/donglua/PhotoPicker "https://github.com/donglua/PhotoPicker")
     - GalleryFinal
-    
-      - 自定义相册，实现了拍照、图片选择（单选/多选）、 裁剪（单/多裁剪）、旋转、
-       
-      - ImageLoader无绑定任由开发者选 择、功能可配置、主题样式可配置。GalleryFinal为你定制相册。
-    
-      - [https://github.com/pengjianbo/GalleryFinal](https://github.com/pengjianbo/GalleryFinal)
+        - 自定义相册，实现了拍照、图片选择（单选/多选）、 裁剪（单/多裁剪）、旋转
+        - ImageLoader无绑定任由开发者选 择、功能可配置、主题样式可配置。GalleryFinal为你定制相册
+        - [https://github.com/pengjianbo/GalleryFinal](https://github.com/pengjianbo/GalleryFinal)
 
 - ViewPager
     项目transition过渡控件ViewPagerIndicator [https://github.com/JakeWharton/ViewPagerIndicator](https://github.com/JakeWharton/ViewPagerIndicator)
