--- a/_posts/project/2016-11-01-Backup.md
+++ b/_posts/project/2016-11-01-Backup.md
@@ -39,7 +39,7 @@ Android版本已发布[google paly](https://play.google.com/store/apps/details?i
 ---
 <h1 id="开发方式和架构内容"> 开发方式和架构内容 </h1>
 1. Android开发
-   搭配framework接口
+ - 搭配framework接口
 2. 使用Git作为版本管理
 3. 使用Android Studio开发客户端
 4. 使用Play Store和升级服务器作为升级方式
