--- a/_posts/project/2016-11-01-ZenTalk.md
+++ b/_posts/project/2016-11-01-ZenTalk.md
@@ -95,13 +95,25 @@ webview缓存跟服务器配置有关，一般webview设定后就可以支援断
 <h1 id="遇到的问题"> 遇到的问题 </h1>
 
 1. H5 banner和 Native ViewPager滑动冲突
-解决方案：上面H5 banner的上面区域禁止ViewPager滑动
+
+    解决方案：上面H5 banner的上面区域禁止ViewPager滑动
 
 2. 推荐页面H5 “click to top” button 点击事件触发背景点击
-推荐页面的to top button点击后，事件会穿透到下面的listview. 导致点击to top后会进入帖子正文。
 
-2. Webview缓存机制，设定为default后不work
-详见：F:\Manager\ZenTalk\html缓存
+    推荐页面的to top button点击后，事件会穿透到下面的listview. 导致点击to top后会进入帖子正文。
+
+3. Webview缓存机制，设定为default后不work
+
+    详见：F:\Manager\ZenTalk\html缓存
+
+4. 账号整合问题
+   
+   ZenTalk需要整合XXX账号，因XXX跟之前的公司账号不同步。我们期望能够用SSO方案来实现：用户只需要登录一次就可以访问所有相互信任的应用系统。
+   
+   首先需要XXX提供统一接口，打通两个服务器间登录，注册，获取用户信息等环节。 app Client采用google规范的account manager接口来管理账号。
+   
+   PS: [SSO: Single Sign On](http://baike.baidu.com/link?url=4Myt6Fk7SnI-eO699FqU6-eIxQY9RUibmPrS98wt2E0gdv2s-2jPkXn0WruhPXXwsb8-yo5VX77X1R-_J1cPSK)
+
 
 ---
 <h1 id="其他"> 其他 </h1>
