--- a/_posts/reactnative/component/2016-05-25-rn-Hello.md
+++ b/_posts/reactnative/component/2016-05-25-rn-Hello.md
@@ -2,8 +2,8 @@
 layout: post
 title: ReactNative 学习笔记 初战
 date: 2016-05-25
-excerpt: "ReactNative 学习笔记 初战"
-tags: [ReactNative,学习笔记]
+excerpt: "ReactNative 初战"
+tags: [ReactNative]
 comments: true
 ---
 
