--- a/_posts/reactnative/2016-06-15-redux.md
+++ b/_posts/reactnative/2016-06-15-redux.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title: Redux
+title: ReactNative 之搭配框架 Redux
 date: 2016-09-23
-excerpt: "Redux"
+excerpt: "Redux 状态管理框架"
 tags: [ReactNative]
 comments: true
 ---
