--- a/_posts/project/2016-11-01-ZenTalk.md
+++ b/_posts/project/2016-11-01-ZenTalk.md
@@ -101,6 +101,28 @@ webview缓存跟服务器配置有关，一般webview设定后就可以支援断
 2. 推荐页面H5 “click to top” button 点击事件触发背景点击
 
     推荐页面的to top button点击后，事件会穿透到下面的listview. 导致点击to top后会进入帖子正文。
+    
+    解决方案：在image div后面叠加一个div，并在hide的时候延迟一下。
+    
+        .html----------------
+        <div id="hide" class="float_icon">
+        </div>
+        <div id = "totop" class="float_icon">
+            <img src="images/btn_top.png" width="100%" height="100%">
+        </div>
+    
+        .js-----------------
+        
+        $(document).scroll(function(){
+            if($(document).scrollTop()>0){
+                hide.show();
+                floatIcon.show();
+            }else{
+                setTimeout("hide.hide()",400);
+                floatIcon.hide();
+            }
+        });
+    
 
 3. Webview缓存机制，设定为default后不work
 
