--- a/_posts/project/2016-11-01-ZenTalk.md
+++ b/_posts/project/2016-11-01-ZenTalk.md
@@ -10,6 +10,7 @@ comments: true
 
 # 目录
 - [项目内容](#项目内容)  
+- [Members](#Members)  
 - [平台支持](#平台支持)
 - [开发方式和架构内容](#开发方式和架构内容)
 - [数据缓存机制](#数据缓存机制)
@@ -35,6 +36,12 @@ comments: true
 - 搜索、浏览、发表、管理帖子
 - 管理个人信息
 - 好友发送信息
+
+---
+<h1 id="Members"> Members </h1>
+- Abbi
+- Scott
+- Venjee
 
 ---
 <h1 id="平台支持"> 平台支持 </h1>
