--- a/_posts/project/2016-11-01-ZenTalk.md
+++ b/_posts/project/2016-11-01-ZenTalk.md
@@ -109,7 +109,7 @@ webview缓存跟服务器配置有关，一般webview设定后就可以支援断
 
     推荐页面的to top button点击后，事件会穿透到下面的listview. 导致点击to top后会进入帖子正文。
     
-    解决方案：在image div后面叠加一个div，并在hide的时候延迟一下。
+    解决方案：在image div后面叠加一个div，并在hide的时候延迟一下。css的touch会在300ms后出发click，因此这里400ms后再把遮挡div hide掉。
     
         .html----------------
         <div id="hide" class="float_icon">
