--- a/_posts/project/2016-11-01-ZenTalk.md
+++ b/_posts/project/2016-11-01-ZenTalk.md
@@ -19,6 +19,7 @@ comments: true
     - [图片缓存](#图片缓存)
 - [安全](#安全)
 - [遇到的问题](#遇到的问题)
+- [项目优化](#项目优化)
 - [其他](#其他)
     - [UX优化](#UX优化)
     - [项目档案](#项目档案)
@@ -145,16 +146,18 @@ webview缓存跟服务器配置有关，一般webview设定后就可以支援断
 
 
 ---
-<h1 id="其他"> 其他 </h1>
+<h1 id="项目优化"> 项目优化 </h1>
 
-<h2 id="UX优化"> UX优化 </h2>
-- Splash页面3s界面后台加载“首页”，“推荐”等几个主要Fragment. user可以3s后看到已经加载ready的首页
+- Splash页面3s时，后台开始加载“首页”，“推荐”等几个主要Fragment. user可以3s后看到已经加载ready的首页
 - 首页不使用wex5框架编写的H5. 绕过wex5框架大量JS加载的时间。提示首页加载效率
 - 首页，帖子正文下拉刷新采用部分刷新
     - 首页仅刷新列表和推荐版块
-    - 帖子正文仅刷新回帖
+    - 帖子正文仅刷新回帖（目前帖子正文是动态生成页面）
 - webview采用不自动加载图片，等页面finish后再发起图片加载方案。提升webview的UX
+- ZenTalk模块化实践详见 F:\Manager\ZenTalk\600 ZenTalk 模块化实践.docx
 
+---
+<h1 id="其他"> 其他 </h1>
 
 <h2 id="项目档案"> 项目档案 </h2>
 
