--- a/_posts/2016-07-15-学习资料.md
+++ b/_posts/2016-07-15-学习资料.md
@@ -3,15 +3,24 @@ layout: post
 title: 学习资料 
 date: 2016-07-15
 excerpt: "学习资料收集"
-tags: [学习资料]
+tags: [其他]
 comments: true
 ---
 
 
-# 学习资料收集
+## 动态咨询
+
+- [动态咨询](#动态咨询)
+- [Android](#Android)
+- [ReactNative](#ReactNative)
+- [JS,HTML,CSS](#JS)
+- [Java](#Java)
+- [IOS 学习资料](#IOS)
+- [GitHub](#GitHub)
+
 
 ---
-## 动态咨询
+<h1 id="动态咨询"> 动态咨询 </h1>
 
 - [今日头条](http://toutiao.com/) 
 - [新浪财经](http://finance.sina.com.cn/) 
@@ -21,7 +30,8 @@ comments: true
 - [开源中国-精华阅读](http://www.oschina.net/search?q=精华阅读&scope=blog&fromerr=eRzjPp3U)
 
 ---
-## Android
+<h1 id="Android"> Android </h1>
+
 - [android学习之路 ](http://stormzhang.com/android/2014/07/07/learn-android-from-rookie/)
 - [Android_Data](https://github.com/Freelander/Android_Data)
 - [Anroid开源项目及库](https://github.com/Tim9Liu9/TimLiu-Android)
@@ -35,26 +45,32 @@ comments: true
 
 
 ---
-## ReactNative
+<h1 id="ReactNative"> ReactNative </h1>
+
 - [Vivian RN 知识储备](http://vivianking6855.github.io/rn-environment-post/)
 - [Vivian RN Awesome](http://vivianking6855.github.io/rn-awesome/)
 - [React-Native-lesson](https://github.com/vczero/react-native-lesson)
 
-## JS,HTML,CSS
+---
+<h1 id="JS"> JS,HTML,CSS </h1>
+
 - [JS规范](https://github.com/airbnb/javascript)
 - [控制代码质量ESLint 使用入门](http://www.tuicool.com/articles/7JZZJzn)
 - [W3C Scholl](http://www.w3school.com.cn/)
 
-## Java
+---
+<h1 id="Java"> Java </h1>
 
 
 
 ---
-## IOS 学习资料
+<h1 id="IOS"> IOS 学习资料 </h1>
+
 trip-to-iOS：[https://github.com/Aufree/trip-to-iOS](https://github.com/Aufree/trip-to-iOS)
 
 ---
-## GitHub
+<h1 id="GitHub"> GitHub </h1>
+
 - [GitHub Android Libraries Top 100 简介](https://github.com/Freelander/Android_Data/blob/master/Android-Librarys-Top-100.md)
 - [github排名](https://github.com/trending)
 - [github搜索](https://github.com/search)
