--- a/_posts/project/2016-11-01-ZenTalk.md
+++ b/_posts/project/2016-11-01-ZenTalk.md
@@ -144,6 +144,14 @@ webview缓存跟服务器配置有关，一般webview设定后就可以支援断
    
    PS: [SSO: Single Sign On](http://baike.baidu.com/link?url=4Myt6Fk7SnI-eO699FqU6-eIxQY9RUibmPrS98wt2E0gdv2s-2jPkXn0WruhPXXwsb8-yo5VX77X1R-_J1cPSK)
 
+5. apk更新问题
+   
+   - apk更新的方案是：从服务器端load config档案，compare 版号后确定是否更新。 
+   - 考虑到后期有非技术人员来维护管理config，因此并未采用version code这个技术性的字段。
+   - 早期开发时，版号中的特殊符号分隔是'.'. 前期测试没有问题。但是后期公司系统build出的apk包含了'_'. 导致前期比较方法出错
+
+   做版本比较方案时应该考虑到后期正式版本的命名规则等因素。
+
 
 ---
 <h1 id="项目优化"> 项目优化 </h1>
