--- a/_posts/books/2016-07-15-Book-给你一步手机-你能怎么赚钱.md
+++ b/_posts/books/2016-07-15-Book-给你一步手机-你能怎么赚钱.md
@@ -1,13 +1,13 @@
  ---
 layout: post
-title: 《给你一步手机，你能怎么赚钱》观后感
+title: 给你一步手机你能怎么赚钱观后感
 date: 2016-07-15
-excerpt: "2016-07-15 《给你一步手机，你能怎么赚钱》观后感"
+excerpt: "2016-07-15 给你一步手机你能怎么赚钱"
 tags: [Book]
 comments: true
 ---
 
-##《给你一步手机，你能怎么赚钱》
+#《给你一步手机，你能怎么赚钱》
 书中介绍了手机的营销的一些优势和特点。比较深刻的有：
 
 1. 智能手机，移动互联的时代，手机上有更多的机会。手机卖水果都可以月赚过万
