--- a/_posts/books/2016-07-15-Book-给你一步手机-你能怎么赚钱.md
+++ b/_posts/books/2016-07-15-Book-给你一步手机-你能怎么赚钱.md
@@ -1,8 +1,8 @@
  ---
 layout: post
-title: 给你一步手机你能怎么赚钱观后感
+title: 观后感
 date: 2016-07-15
-excerpt: "2016-07-15 给你一步手机你能怎么赚钱"
+excerpt: "2016给你一步手机你能怎么赚钱"
 tags: [Book]
 comments: true
 ---
