--- a/_posts/books/2016-07-15-Book-给你一步手机-你能怎么赚钱.md
+++ b/_posts/books/2016-07-15-Book-给你一步手机-你能怎么赚钱.md
@@ -1,11 +1,12 @@
- ---
+---
 layout: post
-title: 观后感
+title: 学习资料 
 date: 2016-07-15
-excerpt: "2016给你一步手机你能怎么赚钱"
-tags: [Book]
+excerpt: "学习资料收集"
+tags: [其他]
 comments: true
 ---
+
 
 #《给你一步手机，你能怎么赚钱》
 书中介绍了手机的营销的一些优势和特点。比较深刻的有：
@@ -23,4 +24,4 @@ comments: true
     - 推广：广告词让人眼前一亮
     - 抢人：周边用户，优惠券和促销，产品和服务合体，推送，广告增加用户和提示用户粘性
     - 微信二维码：app必备
-    - 合适的推送内容，推送时机  
+    - 合适的推送内容，推送时机 
