--- a/_posts/books/2016-07-15-Book-给你一步手机-你能怎么赚钱.md
+++ b/_posts/books/2016-07-15-Book-给你一步手机-你能怎么赚钱.md
@@ -1,9 +1,9 @@
 ---
 layout: post
-title: 学习资料 
+title: 《给你一步手机，你能怎么赚钱》 
 date: 2016-07-15
-excerpt: "学习资料收集"
-tags: [其他]
+excerpt: "2016-07-15 《给你一步手机，你能怎么赚钱》"
+tags: [观后感]
 comments: true
 ---
 
