--- a/_posts/books/2016-11-20-Books-养育男孩.md
+++ b/_posts/books/2016-11-20-Books-养育男孩.md
@@ -7,17 +7,17 @@ tags: [观后感]
 comments: true
 ---
 
-#《养育男孩》
+# 《养育男孩》
 
 1. 三个阶段
     - 0-6岁 温柔岁月。分离更敏感
     - 6-13  他们尝试学者成为男人。爸爸的关爱和教导尤为重要。一定要有一个偶像，可能是爸爸。也可能是跆拳道教练
     - 13岁  向男人进军。会推翻自己的偶像。妈妈要做化解的桥梁
 2. 睾丸激素的影响
-    - 那孩子会喜欢争执和吵架
+    - 男孩子会喜欢争执和吵架
     - 需要明确的组织秩序，如果没有男孩可能会用拳头打出一个秩序来。不健全的环境中，男孩会没有安全感
 3. 男孩女孩大脑的差异
-    - 男孩和女孩在出生时，大脑就存在差异。大脑的发育比女孩慢。左右大脑的连接，交流少于女孩
+    - 男孩和女孩在出生时，大脑就存在差异。男孩大脑的发育比女孩慢。左右大脑的连接，交流少于女孩
     - 帮助男孩建立大脑连接
         - 有意识的教男孩，字，组词，组织句子
         - 利用一切机会，给他们解释看到，听到的事物
