--- a/_posts/books/2016-07-15-Book-给你一步手机-你能怎么赚钱.md
+++ b/_posts/books/2016-07-15-Book-给你一步手机-你能怎么赚钱.md
@@ -1,14 +1,14 @@
 ---
 layout: post
-title: 《给你一步手机，你能怎么赚钱》 
+title: 2016-07-15 《给你一步手机，你能怎么赚钱》读后感
 date: 2016-07-15
-excerpt: "2016-07-15 《给你一步手机，你能怎么赚钱》"
-tags: [观后感]
+excerpt: "《给你一步手机，你能怎么赚钱》读后感"
+tags: [Books]
 comments: true
 ---
 
 
-#《给你一步手机，你能怎么赚钱》
+#《给你一步手机，你能怎么赚钱》读后感
 
 书中介绍了手机的营销的一些优势和特点。比较深刻的有：
 
