--- a/_posts/books/2016-11-11-Books-刻意练习.md
+++ b/_posts/books/2016-11-11-Books-刻意练习.md
@@ -1,13 +1,13 @@
 ---
 layout: post
-title: 《刻意练习》 
+title: 2016-11-11 《刻意练习》 视频观后感
 date: 2016-11-11
-excerpt: "2016-11-11 《刻意练习》视频观后感"
-tags: [观后感]
+excerpt: "《刻意练习》 视频观后感"
+tags: [Books]
 comments: true
 ---
 
-# 《刻意练习》
+# 《刻意练习》视频观后感
 
 1. 天才的真相：天才不是天生的，黄金法则是刻意练习
 2. 有目的的练习实验：很轻松的在100小时左右记住任意60几个数字
