--- a/_posts/books/2016-11-20-Books-养育男孩.md
+++ b/_posts/books/2016-11-20-Books-养育男孩.md
@@ -1,13 +1,13 @@
 ---
 layout: post
-title: 《养育男孩》 
+title: 2016-11-20 《养育男孩》观后感
 date: 2016-11-20
-excerpt: "2016-11-20 《养育男孩》观后感"
-tags: [观后感]
+excerpt: "《养育男孩》观后感"
+tags: [Books]
 comments: true
 ---
 
-# 《养育男孩》
+# 《养育男孩》观后感
 
 1. 三个阶段
     - 0-6岁 温柔岁月。分离更敏感
@@ -33,7 +33,7 @@ comments: true
         - 放下身段和孩子一起打闹
         - 教育男孩要尊重女性
         - 不要在孩子面前吵架
-        - 不必强迫孩子
+        - 不要强迫孩子
 5. 妈妈与儿子
     - 妈妈的观念：与丈夫和异性朋友多沟通，寻求他们的帮助。
     - 妈妈如何帮儿子
