--- a/_posts/books/2016-11-11-Books-刻意练习.md
+++ b/_posts/books/2016-11-11-Books-刻意练习.md
@@ -15,7 +15,7 @@ comments: true
     - 专注练习
     - 有练习反馈
     - 走出舒适区
-3. 大脑的适应力远超我们的想象：伦敦，不断被打破的世界记录
+3. 大脑的适应力远超我们的想象：伦敦司机，不断被打破的世界记录
 4. 心理表征
    - 大脑在思考某个事物或事情时的心理结构
     - 如果能有高质量的心理表征：刻意练习
