--- a/_posts/books/2016-11-19-Books-你就是孩子最好的玩具.md
+++ b/_posts/books/2016-11-19-Books-你就是孩子最好的玩具.md
@@ -33,10 +33,10 @@ comments: true
    - 对孩子抱有不切实际的期望，以及忽略孩子的性格特征
        - 希望孩子超年龄的懂事
        - 希望孩子和自己心目中的理想孩子一样
-       - 
+
 ## 2. 问自己几个问题
 
-   - 我有没有否定、忽视后者轻视孩子的感受？
+   - 有没有否定、忽视后者轻视孩子的感受？
    - 有没有用打击孩子的方式去惩罚后者教训他们？
    - 有没有用消极的方法去驱动他们？
     
@@ -47,7 +47,7 @@ comments: true
 ## 4. 情感引导的好处
    - 帮助孩子认识、表达和调节自己的情绪
    - 提高孩子的语言表达能力
-   - 因为表达顺畅，所以减少发脾气的显现
+   - 因为表达顺畅，所以减少发脾气的现象
    - 促进家长和孩子的沟通，加深感情
    - 孩子学会结交新朋友
    - 学会忍耐，学会面对逆境
@@ -57,13 +57,16 @@ comments: true
    - 埋下种子：清晰准确告诉他怎么做是对的，你的要求是什么
    - 观察和判断：本质是关注
    - 聆听：蹲下来，看着孩子的眼睛聆听
-   - 体察情感，反应情感，理解孩子的感受。我知道你...
-   - 引导孩子决绝问题。情绪引导：
+   - 体察情感，理解孩子的感受。我知道你...
+   - 引导孩子解决问题。情绪引导：
         - 你觉得怎么做才能...
         - 那你看咱们怎么才能解决这个问题
         - 太好了，你的这个想法就叫做分享
    
-   如果孩子做对了，给予肯定。说出为什么。培养最好的机会是他做对的时候。珍惜这个机会告诉他是对的，告诉他为什么。
+   如果孩子做对了，给予肯定。说出为什么。
+   
+   培养最好的机会是他做对的时候。珍惜这个机会告诉他是对的，告诉他为什么。
+   
    例如这就是“坚持”，你刚才的行为就是坚持。你已经学会了。
    
 ## 6. 婴儿期：开始种下亲密基因
@@ -80,26 +83,26 @@ comments: true
 ## 7. 2-3岁，建立亲密关系的关键时期
 
 - 学会设定限度：
-   - 让他们知道什么可以做，什么不可以做。我们的无条件的爱：温柔，有边界。
-   - 父母可以解释为什么可以后者为什么不可以，能讲道理的父母更能让孩子信服
+   - 让他们知道什么可以做。什么不可以做。我们的无条件的爱是温柔但有边界的。
+   - 父母可以解释为什么可以？后者为什么不可以。能讲道理的父母更能让孩子信服
 - 孩子需要自信心
    - 给孩子一些自己决策的空间，不要否定他的所有要求
-   - 大屁股互让孩子缺乏自信，今后在学校表现更糟
+   - 打屁股互让孩子缺乏自信，今后在学校表现更糟
 
 ## 8. 用情感引导的方法处理孩子的情绪
 
-- 让自己的实现和孩子平齐，进行充分的眼神交流，问他认为自己做的是对还是错
+- 让自己的视线和孩子平齐，进行充分的眼神交流。问他认为自己做的是对还是错
 - 如果孩子没有平静下来或者停止错误行为，带他到一个“安静区"或“思考区”，与他一同坐下来。记住，你不是在惩罚他
-- 抱着孩子，说出他的感受，表示你理解他的感受，这样有助于他平静下来
+- 抱着孩子，说出他的感受。表示你理解他的感受，这样有助于他平静下来
 - 平静下来之后，问孩子“这是怎么回事？”“哪里做的不对了？”孩子不明白的话你可以解释给他听；
-- 问问孩子“下次你会怎么做？” 如果他不知道，告诉他怎么做才是恰当的
+- 问问孩子“下次你会怎么做？” 如果他不知道，告诉他怎么做才是恰当的。
 - 感谢孩子帮你想出了解决办法
 - 让孩子设想下“下次又犯了同样的错误会发生什么事情”。告诉孩子，你可以帮助他改正，但是你不会容忍不适当的行为。
 
 ## 9. 通过感情引导而不是赞扬的方法
 
 - 简单的告诉孩子你真棒，对孩子没有帮助
-- 情感引导的方法是更加关注孩子自己的感受，让他知道这件事情本身的乐趣和意义。家长不是评判他的裁判，而是一个真心的交流对象。
+- 情感引导的方法是更加关注孩子自己的感受。让他知道这件事情本身的乐趣和意义。家长不是评判他的裁判，而是一个真心的交流对象。
 - “你一定可以的”“你还以更好”这样的话会让孩子失去兴趣，因为这简直就是责怪
 - 正确的方法。比如
     - “你现在的这种感觉就叫做成就感，怎么样，很开心吧”
@@ -127,7 +130,7 @@ comments: true
 - 孩子是父母的复印件，所以你要先做好社交的示范；
 - 培养孩子尊重他人的隐私，先要解释什么叫隐私，为什么要尊重隐私；
 - 教会孩子如何道歉，但不要强迫他们不真诚的道歉；
-- 让孩子知道抱怨无法让你明白他的需要，教会他如何正确的表达，在他停止抱怨的时候对他表示感谢；
+- 让孩子知道抱怨无法让你明白他的需要。教会他如何正确的表达，在他停止抱怨的时候对他表示感谢；
 - 游戏当中要学会保护别的孩子，不专横。
 - 好的家庭：淡定，有爱的妈妈 + 热情开朗的爸爸
 - 往感情账户里存够钱。
@@ -163,6 +166,7 @@ comments: true
 
 - 让孩子知道除了说谎之外还有别的方法。
 
+
 ## 13. 最重要的原则：无条件的爱
 
 - 不要让我们的情绪左右了和孩子的沟通；
@@ -170,7 +174,8 @@ comments: true
 - 真正无条件的爱，意味着你不会忽略父母这份最重要的工作，愿意为之学习和改变；
 - 无条件的爱不是溺爱，而是任何时候都愿意理解、倾听、帮助孩子成长。无论他一岁，三岁，十四岁，还是二十岁。
 - 不要用我们只爱听话的小朋友
-- 正因为无条件的哎，所以才帮助你。 因为爱你，告诉你怎么做是对的。最后告诉孩子，尽管刚才教训了，管教了你。但是我们爱你
+- 正因为无条件的爱，所以才帮助你。 因为爱你，告诉你怎么做是对的。
+- 最后告诉孩子，尽管刚才教训了，管教了你。但是我们爱你
 
 
 
