--- a/_posts/project/2016-11-01-ZenTalk.md
+++ b/_posts/project/2016-11-01-ZenTalk.md
@@ -151,6 +151,16 @@ webview缓存跟服务器配置有关，一般webview设定后就可以支援断
    - 早期开发时，版号中的特殊符号分隔是'.'. 前期测试没有问题。但是后期公司系统build出的apk包含了'_'. 导致前期比较方法出错
 
    做版本比较方案时应该考虑到后期正式版本的命名规则等因素。
+   
+6. session过期问题
+   
+   ZenTalk遇到登录一段时间后无法发帖问题,经查证是session的问题。首先跟服务器端确认如下：
+   
+   - formsession相当于页面session， 只保存在 client 端。每次登陆都会生成一个formhash 值,只要webview 不关闭这个值将一直有效。
+   - 如果apk 关闭，再重新打开，理论上会引起 formhash 值失效。需要调用zentalkApp_v1.2.8_SPEC.doc 文档中的init Api 重新获取 fromhash值。
+   - 如果在asusaccount 页面做logout 操作，则formhash 会失效。
+
+   解决方案： app每次启动后重新获取formsession
 
 
 ---
