--- a/_posts/project/2016-11-01-ZenTalk.md
+++ b/_posts/project/2016-11-01-ZenTalk.md
@@ -161,6 +161,13 @@ webview缓存跟服务器配置有关，一般webview设定后就可以支援断
    - 如果在asusaccount 页面做logout 操作，则formhash 会失效。
 
    解决方案： app每次启动后重新获取formsession
+   
+7. H5存储数据问题
+   
+   android端只有捆绑的H5页面允许存储数据。例如ZenTalk的code中预载的offline页面。
+   webview加载的外部url没把发存储数据到本地。
+
+   解决方案： app提供存储接口给H5使用
 
 
 ---
@@ -173,6 +180,11 @@ webview缓存跟服务器配置有关，一般webview设定后就可以支援断
     - 帖子正文仅刷新回帖（目前帖子正文是动态生成页面）
 - webview采用不自动加载图片，等页面finish后再发起图片加载方案。提升webview的UX
 - ZenTalk模块化实践详见 F:\Manager\ZenTalk\600 ZenTalk 模块化实践.docx
+- 内存优化
+    - 数据量不大，在千级以内用SparseArray和ArrayMap代替HashMap
+
+
+
 
 ---
 <h1 id="其他"> 其他 </h1>
