--- a/_posts/project/2016-11-01-ZenTalk.md
+++ b/_posts/project/2016-11-01-ZenTalk.md
@@ -93,7 +93,7 @@ webview缓存跟服务器配置有关，一般webview设定后就可以支援断
 - “收藏”，“提醒”，“消息”，“我的帖子”点击后，事实更新各自数据。
 
 <h2 id="图片缓存"> 图片缓存 </h2>
-使用volley 库的图片缓存功能
+app端使用volley 库的图片缓存功能
 
 ---
 <h1 id="安全"> 安全 </h1>
@@ -182,8 +182,31 @@ webview缓存跟服务器配置有关，一般webview设定后就可以支援断
 - ZenTalk模块化实践详见 F:\Manager\ZenTalk\600 ZenTalk 模块化实践.docx
 - 内存优化
     - 数据量不大，在千级以内用SparseArray和ArrayMap代替HashMap
+- webview加载效率优化
+    - webview加载优化之Cache
 
+        App端方案：加入webview cache方案。 实际测试效果：（通过抓包和图片文件分析）
+        
+        1）	图片不会重新load
+        
+        2）	网页相关的html, css, js等会重新下载
+        
+        不过这些文件加起来基本< 10k，对加载效率影响已经非常小。
+        设定cache方案后，为何这些文件会重新下载还待进一步研究。初步猜测可能跟服务器端配置有关。
 
+    - webview加载优化之wex5加载效率优化
+
+        对wex5部分加载做优化。 例如用native storage代替页面间切换获取数据；js加载优化等
+      
+    - webview加载优化之缩略图
+
+        建议服务器支援多档图片，例如
+        
+        1)	Thumbnail：小图，48*48, 92*92?  用于组文章，帖子正文等页面，加速帖子列表渲染和加载
+        
+        2)	preview大图：512*512, 1024*768?     用于user点击后查看大图，加速大图页面的渲染和加载
+        
+        3)	原图：已经支援
 
 
 ---
