--- a/_posts/books/2016-12-14-Books-如何说孩子才会听-怎么听孩子才会说.md
+++ b/_posts/books/2016-12-14-Books-如何说孩子才会听-怎么听孩子才会说.md
@@ -36,7 +36,7 @@ comments: true
 
 ### 正确的方法
 
-- 倾听。听孩子说，可能只要回答，嗯，哦，真是，就够了
+- 倾听。听孩子说，可能只要回答，嗯，哦，真是。这些就够了
 - 说出孩子的感受
     
     例如 尝试幻想来对话：我敢担保，如果你有法力，魔法师可以变出耳朵
@@ -67,12 +67,14 @@ comments: true
 
 不要说：你走吧，要不要收拾东西
 
-应该说：我感觉你很生气......
+应该说：我感觉你很生气。你打赌你肯定希望一些事情跟现在大不一样。孩子会说对，我很生气。为什么生气，了解情况。一起解决。
 
 
 ## 2. 合作，怎么让孩子听话
 
 ### 误区：指责，辱骂，命令，威胁
+
+这些只能让孩子当下配合你。叛逆起来当下都不配合。因为他的情绪无法安置。
 
 ### 正确的方法
 
