--- a/_posts/books/2016-12-14-Books-如何说孩子才会听-怎么听孩子才会说.md
+++ b/_posts/books/2016-12-14-Books-如何说孩子才会听-怎么听孩子才会说.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title: 2016-12-14 如何说孩子才会听，怎么听孩子才会说听后感
+title: 2016-12-14 《如何说孩子才会听，怎么听孩子才会说》听后感
 date: 2016-12-14
-excerpt: "如何说孩子才会听，怎么听孩子才会说听后感"
+excerpt: "《如何说孩子才会听，怎么听孩子才会说》听后感"
 tags: [Books]
 comments: true
 ---
@@ -106,7 +106,7 @@ comments: true
   
 - 说出自己的感受
 
-    我听到你跟他打架了。真的下了一跳。妈妈特别害怕你跟同学做出互相伤害的行为来。你能理解妈妈的感受吗？
+    我听到你跟他打架了。真的下了一跳。妈妈特别害怕你跟同学做出互相伤害的行为来。你能理解妈妈的担心吗？
 
 - 解决方法
     - 写下所有的想法
@@ -147,7 +147,13 @@ comments: true
 ## 5. 如何面对愤怒
 
 - 如果真的急起来，有一招“快速逃命”。告诉孩子你要打人了，让孩子快逃
-- 生气的时候可以用一个词表达，
+- 生气的时候可以用一个词表达，小心，注意，不要这样。
+  
+    说出自己的不喜欢的东西。
+    
+    例如：我特别不喜欢你在餐桌上丢东西，拿食物去仍别人非常的不礼貌。
+    
+    我希望你有点餐桌礼仪。好好吃饭，不要拿食物玩耍。
 
 撒谎时候的正确做法：
 
