--- a/_posts/project/2016-11-01-ZenTalk.md
+++ b/_posts/project/2016-11-01-ZenTalk.md
@@ -75,6 +75,7 @@ webview缓存跟服务器配置有关，一般webview设定后就可以支援断
             webSettings.setAppCachePath(getContext().getCacheDir().getAbsolutePath());
             webSettings.setAppCacheEnabled(true);
        }
+       
 
 <h2 id="json数据缓存"> json数据缓存 </h2>
 非实时性的接口（对实时显示要求不高的模块）
@@ -289,4 +290,6 @@ app端使用volley 库的图片缓存功能
 
 > [常用github项目类库](http://www.csdn123.com/html/topnews201408/14/2714.htm)
  
-> [Android WebView开发问题及优化汇总](http://blog.csdn.net/xyz_lmn/article/details/3947339473701701) 
+> [Android WebView开发问题及优化汇总](http://blog.csdn.net/xyz_lmn/article/details/3947339473701701)
+
+> [Android WebView 缓存处理](http://www.open-open.com/lib/view/open1392188052301.html )
