--- a/_posts/project/2016-11-01-ZenTalk.md
+++ b/_posts/project/2016-11-01-ZenTalk.md
@@ -19,6 +19,7 @@ comments: true
     - [图片缓存](#图片缓存)
 - [安全](#安全)
 - [遇到的问题](#遇到的问题)
+- [推送方案](#推送方案)
 - [项目优化](#项目优化)
 - [其他](#其他)
     - [UX优化](#UX优化)
@@ -57,8 +58,9 @@ comments: true
 3. 使用Android Studio，WebStorm开发客户端
 4. 使用原始Discuz服务器 和 Spring Hibernate框架（新功能）
 5. 使用CN Store和升级服务器作为升级方式
-6. 使用Android官网，github，Stackoverflow和codekk作为主要的知识查找
-7. 使用Lint, FindBugs, monkey test做app代码和quanlity检查
+6. 使用个推作为推送方案
+7. 使用Android官网，github，Stackoverflow和codekk作为主要的知识查找
+8. 使用Lint, FindBugs, Android atutotest, monkey test做app代码和quanlity检查
 
 ---
 <h1 id="数据缓存机制"> 数据缓存机制 </h1>
@@ -170,6 +172,14 @@ app端使用volley 库的图片缓存功能
 
    解决方案： app提供存储接口给H5使用
 
+---
+<h1 id="推送方案"> 推送方案 </h1>
+
+使用个推作为推送方案
+
+- app端在个推服务器注册Project
+- app启动时通过api把userid和clientid传送到ZenTalk服务器
+- ZenTalk服务器会依据userid,clientid实现全局推送，分组推送，单点推送（ZenTalk服务器依据userid确认分组）
 
 ---
 <h1 id="项目优化"> 项目优化 </h1>
