--- a/_posts/books/2017-02-28-Books-让孩子远离焦虑.md
+++ b/_posts/books/2017-02-28-Books-让孩子远离焦虑.md
@@ -166,6 +166,7 @@ comments: true
 - 要让孩子有掌控的感受，决定自己从哪一步开始，孩子享有的掌控感受越多越好。
 - 不要强迫孩子面对恐惧，要记住孩子是在安全环境中成长起来的，而不是在恐惧的环境中。
 
+请给孩子无条件的爱，帮助他/她简历自己独立完整的自尊体系。
 
 
 <br/>
