--- a/_posts/books/2016-11-11-Books-刻意练习.md
+++ b/_posts/books/2016-11-11-Books-刻意练习.md
@@ -3,7 +3,7 @@ layout: post
 title: 2016-11-11 《刻意练习》 视频观后感
 date: 2016-11-11
 excerpt: "《刻意练习》 视频观后感"
-tags: [Books]
+tags: [Books工作]
 comments: true
 ---
 
