--- a/_posts/books/2016-11-29-Books-斯坦福大学最受欢迎的创意课.md
+++ b/_posts/books/2016-11-29-Books-斯坦福大学最受欢迎的创意课.md
@@ -3,7 +3,7 @@ layout: post
 title: 2016-11-29 《斯坦福大学最受欢迎的创意课》听后感
 date: 2016-11-29
 excerpt: "《斯坦福大学最受欢迎的创意课》听后感"
-tags: [Books]
+tags: [Books工作]
 comments: true
 ---
 
