--- a/_posts/books/2016-12-14-Books-如何说孩子才会听-怎么听孩子才会说.md
+++ b/_posts/books/2016-12-14-Books-如何说孩子才会听-怎么听孩子才会说.md
@@ -3,7 +3,7 @@ layout: post
 title: 2016-12-14 《如何说孩子才会听，怎么听孩子才会说》听后感
 date: 2016-12-14
 excerpt: "《如何说孩子才会听，怎么听孩子才会说》听后感"
-tags: [Books]
+tags: [Books教育]
 comments: true
 ---
 
