--- a/_posts/books/2016-12-26-Books-演讲的力量.md
+++ b/_posts/books/2016-12-26-Books-演讲的力量.md
@@ -3,7 +3,7 @@ layout: post
 title: 2016-12-26 演讲的力量
 date: 2016-12-26
 excerpt: "演讲的力量"
-tags: [Books]
+tags: [Books工作]
 comments: true
 ---
 
@@ -25,7 +25,6 @@ comments: true
 
 - 狮心男孩
 - 例：就我而言，我不会放弃，永远不会
-
 
 ### 2、思想是演讲的基础
 
