--- a/_posts/books/2017-02-28-Books-让孩子远离焦虑.md
+++ b/_posts/books/2017-02-28-Books-让孩子远离焦虑.md
@@ -3,7 +3,7 @@ layout: post
 title: 2017-02-28 让孩子远离焦虑
 date: 2017-02-28
 excerpt: "让孩子远离焦虑"
-tags: [Books]
+tags: [Books教育]
 comments: true
 ---
 
@@ -96,11 +96,13 @@ comments: true
 - 焦虑的警告信号就是“有任何风险，就不要去尝试”。
 - 你需要让孩子认识到“有风险，但不大，我可以应付”。
 
-### 第三课：对风险的评估——讲事实，而非凭感觉。
+### 第三课：对风险的评估—讲事实，而非凭感觉。
 
-你只需要问问题，引发孩子自己的思考，让他们分清感觉和事实。不需要解释事情发生的可能性，孩子会用事实自己思考问题。
+你只需要问问题，引发孩子自己的思考，让他们分清感觉和事实。
 
-### 第四课：结果与可能性混淆——要让孩子不去多想“多可怕”，要多想“怎么可能”。
+不需要解释事情发生的可能性，孩子会用事实自己思考问题。
+
+### 第四课：结果与可能性混淆—要让孩子不去多想“多可怕”，要多想“怎么可能”。
 
 ### 第五课：想法不等于事实。
 
