--- a/_posts/books/2016-07-15-Book-给你一步手机-你能怎么赚钱.md
+++ b/_posts/books/2016-07-15-Book-给你一步手机-你能怎么赚钱.md
@@ -3,7 +3,7 @@ layout: post
 title: 2016-07-15 《给你一步手机，你能怎么赚钱》读后感
 date: 2016-07-15
 excerpt: "《给你一步手机，你能怎么赚钱》读后感"
-tags: [Books]
+tags: [Books工作]
 comments: true
 ---
 
