--- a/_posts/books/2016-11-20-Books-养育男孩.md
+++ b/_posts/books/2016-11-20-Books-养育男孩.md
@@ -3,7 +3,7 @@ layout: post
 title: 2016-11-20 《养育男孩》观后感
 date: 2016-11-20
 excerpt: "《养育男孩》观后感"
-tags: [Books]
+tags: [Books教育]
 comments: true
 ---
 
