--- a/_posts/books/2016-11-24-Books-商业的本质.md
+++ b/_posts/books/2016-11-24-Books-商业的本质.md
@@ -3,7 +3,7 @@ layout: post
 title: 2016-11-24 《商业的本质》听后感
 date: 2016-11-24
 excerpt: "《商业的本质》听后感"
-tags: [Books]
+tags: [Books工作]
 comments: true
 ---
 
