--- a/_posts/books/教育/2016-11-19-Books-你就是孩子最好的玩具.md
+++ b/_posts/books/教育/2016-11-19-Books-你就是孩子最好的玩具.md
@@ -3,7 +3,7 @@ layout: post
 title: 2016-11-19 《你就是孩子最好的玩具》观后感
 date: 2016-11-19
 excerpt: "《你就是孩子最好的玩具》观后感"
-tags: [Books教育]
+tags: [书籍 教育]
 comments: true
 ---
 
