--- a/_posts/books/教育/2016-12-16-Books-如何培养孩子的社会能力.md
+++ b/_posts/books/教育/2016-12-16-Books-如何培养孩子的社会能力.md
@@ -3,7 +3,7 @@ layout: post
 title: 2016-12-16 《如何培养孩子的社会能力》听后感
 date: 2016-12-16
 excerpt: "《如何培养孩子的社会能力》听后感"
-tags: [Books教育]
+tags: [书籍 教育]
 comments: true
 ---
 
