--- a/_posts/books/工作/2016-11-03-Books-联盟雇主与员工的新型关系.md
+++ b/_posts/books/工作/2016-11-03-Books-联盟雇主与员工的新型关系.md
@@ -3,7 +3,7 @@ layout: post
 title: 2016-11-03 《联盟雇主与员工的新型关系》視頻观后感
 date: 2016-11-03
 excerpt: "《联盟雇主与员工的新型关系》視頻观后感"
-tags: [Books工作]
+tags: [书籍 工作]
 comments: true
 ---
 
