--- a/_posts/books/工作/2016-12-28-Books-沃顿商学院最受欢迎的谈判课.md
+++ b/_posts/books/工作/2016-12-28-Books-沃顿商学院最受欢迎的谈判课.md
@@ -3,7 +3,7 @@ layout: post
 title: 2016-12-28 沃顿商学院最受欢迎的谈判课
 date: 2016-12-28
 excerpt: "沃顿商学院最受欢迎的谈判课"
-tags: [Books工作]
+tags: [书籍 工作]
 comments: true
 ---
 
