--- a/_posts/books/教育/2016-12-16-Books-不吼不叫-如何平静地让孩子与父母合作.md
+++ b/_posts/books/教育/2016-12-16-Books-不吼不叫-如何平静地让孩子与父母合作.md
@@ -3,7 +3,7 @@ layout: post
 title: 2016-12-16 《不吼不叫，如何平静地让孩子与父母合作》听后感
 date: 2016-12-16
 excerpt: "《不吼不叫，如何平静地让孩子与父母合作》听后感"
-tags: [Books教育]
+tags: [书籍 教育]
 comments: true
 ---
 
