--- a/_posts/books/生活/2017-02-22-Books-看清你的一生.md
+++ b/_posts/books/生活/2017-02-22-Books-看清你的一生.md
@@ -3,7 +3,7 @@ layout: post
 title: 2017-02-22 See Your Lifetime Clearly(看清你的一生)
 date: 2017-02-22
 excerpt: "看清你的一生"
-tags: [Books生活]
+tags: [书籍 生活]
 comments: true
 ---
 
