--- a/_posts/books/工作/2016-11-11-Books-刻意练习.md
+++ b/_posts/books/工作/2016-11-11-Books-刻意练习.md
@@ -1,9 +1,9 @@
 ---
 layout: post
-title: 2016-11-11 《刻意练习》 视频观后感
+title: 2016-11-11 工作 - 《刻意练习》
 date: 2016-11-11
-excerpt: "《刻意练习》 视频观后感"
-tags: [书籍 工作]
+excerpt: "《刻意练习》"
+tags: [书籍]
 comments: true
 ---
 
