--- a/_posts/books/工作/2016-11-24-Books-商业的本质.md
+++ b/_posts/books/工作/2016-11-24-Books-商业的本质.md
@@ -1,9 +1,9 @@
 ---
 layout: post
-title: 2016-11-24 《商业的本质》听后感
+title: 2016-11-24 工作 - 《商业的本质》
 date: 2016-11-24
-excerpt: "《商业的本质》听后感"
-tags: [书籍 工作]
+excerpt: "《商业的本质》"
+tags: [书籍]
 comments: true
 ---
 
