--- a/_posts/books/工作/2016-12-16-Books-物联网畅想.md
+++ b/_posts/books/工作/2016-12-16-Books-物联网畅想.md
@@ -1,9 +1,9 @@
 ---
 layout: post
-title: 2016-12-16 物联网畅想
+title: 2016-12-16 工作 - 物联网畅想
 date: 2016-12-16
 excerpt: "物联网畅想"
-tags: [书籍 工作]
+tags: [书籍]
 comments: true
 ---
 
