--- a/_posts/books/工作/2017-01-04-Books-超级个体.md
+++ b/_posts/books/工作/2017-01-04-Books-超级个体.md
@@ -1,9 +1,9 @@
 ---
 layout: post
-title: 2017-01-04 超级个体
+title: 2017-01-04 工作 - 古典的演讲-超级个体
 date: 2017-01-04
-excerpt: "古典 超级个体"
-tags: [书籍 工作]
+excerpt: "古典的演讲-超级个体"
+tags: [书籍]
 comments: true
 ---
 
