--- a/_posts/books/工作/2016-11-03-Books-联盟雇主与员工的新型关系.md
+++ b/_posts/books/工作/2016-11-03-Books-联盟雇主与员工的新型关系.md
@@ -1,13 +1,13 @@
 ---
 layout: post
-title: 2016-11-03 《联盟雇主与员工的新型关系》視頻观后感
+title: 2016-11-03 工作 - 联盟雇主与员工的新型关系
 date: 2016-11-03
-excerpt: "《联盟雇主与员工的新型关系》視頻观后感"
-tags: [书籍 工作]
+excerpt: "联盟雇主与员工的新型关系"
+tags: [书籍]
 comments: true
 ---
 
-# 《联盟雇主与员工的新型关系》視頻观后感
+# 視頻观后感
 
 2016.11.16号公司内部组织了联盟视频的分享讨论会。<br>
 视频中的生动讲解和例子，观察过程中被戳中多处戳中痛点。眼睛略有瑟瑟的感觉。
