--- a/_posts/books/工作/2016-11-29-Books-斯坦福大学最受欢迎的创意课.md
+++ b/_posts/books/工作/2016-11-29-Books-斯坦福大学最受欢迎的创意课.md
@@ -1,9 +1,9 @@
 ---
 layout: post
-title: 2016-11-29 《斯坦福大学最受欢迎的创意课》听后感
+title: 2016-11-29 工作 - 《斯坦福大学最受欢迎的创意课》
 date: 2016-11-29
-excerpt: "《斯坦福大学最受欢迎的创意课》听后感"
-tags: [书籍 工作]
+excerpt: "《斯坦福大学最受欢迎的创意课》"
+tags: [书籍]
 comments: true
 ---
 
