--- a/_posts/books/工作/2016-12-26-Books-演讲的力量.md
+++ b/_posts/books/工作/2016-12-26-Books-演讲的力量.md
@@ -1,9 +1,9 @@
 ---
 layout: post
-title: 2016-12-26 演讲的力量
+title: 2016-12-26 工作 - 《演讲的力量》
 date: 2016-12-26
-excerpt: "演讲的力量"
-tags: [书籍 工作]
+excerpt: "《演讲的力量》"
+tags: [书籍]
 comments: true
 ---
 
