--- a/_posts/books/工作/2017-02-10-Books-关键对话.md
+++ b/_posts/books/工作/2017-02-10-Books-关键对话.md
@@ -1,9 +1,9 @@
 ---
 layout: post
-title: 2017-02-10 关键对话
+title: 2017-02-10 工作 - 《关键对话》
 date: 2017-02-10
-excerpt: "关键对话"
-tags: [书籍 工作]
+excerpt: "《关键对话》"
+tags: [书籍]
 comments: true
 ---
 
