--- a/_posts/books/工作/2016-11-03-Books-联盟雇主与员工的新型关系.md
+++ b/_posts/books/工作/2016-11-03-Books-联盟雇主与员工的新型关系.md
@@ -3,7 +3,7 @@ layout: post
 title: 2016-11-03 工作 - 联盟雇主与员工的新型关系
 date: 2016-11-03
 excerpt: "联盟雇主与员工的新型关系"
-tags: [书籍]
+tags: [读书]
 comments: true
 ---
 
