--- a/_posts/books/工作/2016-11-29-Books-斯坦福大学最受欢迎的创意课.md
+++ b/_posts/books/工作/2016-11-29-Books-斯坦福大学最受欢迎的创意课.md
@@ -3,7 +3,7 @@ layout: post
 title: 2016-11-29 工作 - 《斯坦福大学最受欢迎的创意课》
 date: 2016-11-29
 excerpt: "《斯坦福大学最受欢迎的创意课》"
-tags: [书籍]
+tags: [读书]
 comments: true
 ---
 
