--- a/_posts/books/工作/2016-12-28-Books-沃顿商学院最受欢迎的谈判课.md
+++ b/_posts/books/工作/2016-12-28-Books-沃顿商学院最受欢迎的谈判课.md
@@ -3,7 +3,7 @@ layout: post
 title: 2016-12-28 工作 - 《沃顿商学院最受欢迎的谈判课》
 date: 2016-12-28
 excerpt: "《沃顿商学院最受欢迎的谈判课》"
-tags: [书籍]
+tags: [读书]
 comments: true
 ---
 
