--- a/_posts/books/工作/2017-01-04-Books-超级个体.md
+++ b/_posts/books/工作/2017-01-04-Books-超级个体.md
@@ -3,7 +3,7 @@ layout: post
 title: 2017-01-04 工作 - 古典的演讲-超级个体
 date: 2017-01-04
 excerpt: "古典的演讲-超级个体"
-tags: [书籍]
+tags: [读书]
 comments: true
 ---
 
