--- a/_posts/books/生活/2016-12-01-Books-哈弗大学积极的环境能改变人.md
+++ b/_posts/books/生活/2016-12-01-Books-哈弗大学积极的环境能改变人.md
@@ -1,9 +1,9 @@
 ---
 layout: post
-title: 2016-12-01 哈弗大学《积极的环境能改变人》观后感
+title: 2016-12-01 生活 - 哈弗大学《积极的环境能改变人》观后感
 date: 2016-12-01
 excerpt: "哈弗大学《积极的环境能改变人》观后感"
-tags: [书籍 生活]
+tags: [读书]
 comments: true
 ---
 
