--- a/_posts/books/工作/2016-07-15-Book-给你一步手机-你能怎么赚钱.md
+++ b/_posts/books/工作/2016-07-15-Book-给你一步手机-你能怎么赚钱.md
@@ -3,7 +3,7 @@ layout: post
 title: 2016-07-15 工作 - 《给你一步手机，你能怎么赚钱》
 date: 2016-07-15
 excerpt: "《给你一步手机，你能怎么赚钱》"
-tags: [书籍]
+tags: [读书]
 comments: true
 ---
 
