--- a/_posts/books/教育/2016-11-20-Books-养育男孩.md
+++ b/_posts/books/教育/2016-11-20-Books-养育男孩.md
@@ -1,9 +1,9 @@
 ---
 layout: post
-title: 2016-11-20 《养育男孩》观后感
+title: 2016-11-20 教育 - 《养育男孩》
 date: 2016-11-20
-excerpt: "《养育男孩》观后感"
-tags: [书籍 教育]
+excerpt: "《养育男孩》"
+tags: [读书]
 comments: true
 ---
 
