--- a/_posts/books/生活/2017-02-22-Books-看清你的一生.md
+++ b/_posts/books/生活/2017-02-22-Books-看清你的一生.md
@@ -1,9 +1,9 @@
 ---
 layout: post
-title: 2017-02-22 See Your Lifetime Clearly(看清你的一生)
+title: 2017-02-22 看清你的一生
 date: 2017-02-22
-excerpt: "看清你的一生"
-tags: [书籍 生活]
+excerpt: "See Your Lifetime Clearly"
+tags: [读书]
 comments: true
 ---
 
