--- a/_posts/books/生活/2017-02-28-Books-幸福的方法.md
+++ b/_posts/books/生活/2017-02-28-Books-幸福的方法.md
@@ -1,9 +1,9 @@
 ---
 layout: post
-title: 2017-02-28 幸福的方法
+title: 2017-02-28 生活 - 幸福的方法
 date: 2017-02-28
 excerpt: "幸福的方法"
-tags: [书籍 生活]
+tags: [读书]
 comments: true
 ---
 
