--- a/_posts/books/教育/2016-12-16-Books-不吼不叫-如何平静地让孩子与父母合作.md
+++ b/_posts/books/教育/2016-12-16-Books-不吼不叫-如何平静地让孩子与父母合作.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 2016-12-16 教育 - 《不吼不叫，如何平静地让孩子与父母合作》
+title: 2016-12-16 《不吼不叫，如何平静地让孩子与父母合作》
 date: 2016-12-16
 excerpt: "《不吼不叫，如何平静地让孩子与父母合作》"
 tags: [读书]
