--- a/_posts/books/生活/2016-12-01-Books-哈弗大学积极的环境能改变人.md
+++ b/_posts/books/生活/2016-12-01-Books-哈弗大学积极的环境能改变人.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title: 2016-12-01 生活 - 哈弗大学《积极的环境能改变人》观后感
+title: 2016-12-01 哈弗大学《积极的环境能改变人》
 date: 2016-12-01
-excerpt: "哈弗大学《积极的环境能改变人》观后感"
+excerpt: "哈弗大学《积极的环境能改变人》"
 tags: [读书]
 comments: true
 ---
