--- a/_posts/books/工作/2017-01-04-Books-超级个体.md
+++ b/_posts/books/工作/2017-01-04-Books-超级个体.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 2017-01-04 工作 - 古典的演讲-超级个体
+title: 2017-01-04 古典的演讲-超级个体
 date: 2017-01-04
 excerpt: "古典的演讲-超级个体"
 tags: [读书]
