--- a/_posts/books/教育/2016-12-16-Books-如何培养孩子的社会能力.md
+++ b/_posts/books/教育/2016-12-16-Books-如何培养孩子的社会能力.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 2016-12-16 教育 - 《如何培养孩子的社会能力》
+title: 2016-12-16 《如何培养孩子的社会能力》
 date: 2016-12-16
 excerpt: "《如何培养孩子的社会能力》"
 tags: [读书]
