--- a/_posts/2016-07-15-学习资料.md
+++ b/_posts/2016-07-15-学习资料.md
@@ -8,9 +8,9 @@ comments: true
 ---
 
 
-## 动态咨询
+## 动态资讯
 
-- [动态咨询](#动态咨询)
+- [动态资讯](#动态资讯)
 - [Android](#Android)
 - [ReactNative](#ReactNative)
 - [JS,HTML,CSS](#JS)
@@ -20,7 +20,7 @@ comments: true
 
 
 ---
-<h1 id="动态咨询"> 动态咨询 </h1>
+<h1 id="动态资讯"> 动态资讯 </h1>
 
 - [今日头条](http://toutiao.com/) 
 - [新浪财经](http://finance.sina.com.cn/) 
