--- a/_posts/books/生活/2017-03-02-Books-次第花开.md
+++ b/_posts/books/生活/2017-03-02-Books-次第花开.md
@@ -3,17 +3,23 @@ layout: post
 title: 2017-3-2 《次第花开》
 date: 2017-3-2
 excerpt: "《次第花开》"
-tags: [读书]
+categories: 读书
+tags: [生活]
 comments: true
 ---
 
+* content
+{:toc}
+
 # 前言
+----------------------------------
 
 一本讲佛法的书。一个人能把佛法讲的这么透彻，而且文字像诗一样优美。
 
 这本书的阅读方法是随便翻开一页，读下去就好，都有心灵的收获。
 
 # 认识苦
+----------------------------------
 
 根据佛陀的开示，解脱是从认识痛苦开始的。
 
@@ -32,6 +38,7 @@ comments: true
 寂天菩萨说：“问题若有办法解决，就不必担心；若没有办法解决，担心也没有用。”
 
 # 克服恐惧
+-----------------------------------
 
 - 佛陀说一切痛苦的根源在于我们长期以来对自身以及外部世界根深蒂固的误解，执幻为实。
 - 万事万物都依赖内在和外在的条件而生灭，因此不具固有性、恒常性，这就是无我和无常。
@@ -41,6 +48,7 @@ comments: true
 - 熟悉无常令我们内心真正放松而开阔，另一个好处是我们因此而更加珍惜人生，懂得修行佛法的意义。
 
 ## 人身难得
+-----------------------------------
 
 - 生老病死、悲欢离合、幸福的、悲惨的、成功的、潦倒的，人生的种种经历，无一不在启发我们觉悟。
 - 佛经上说，如三千大千世界一样广阔的海洋上，漂浮着一根木轭，上有小孔，海底有只盲龟，每一百年浮出海面一次。
@@ -51,6 +59,7 @@ comments: true
 若善用此人身，即身即可解脱。
 
 ## 安乐
+----------------------------------
 
 - 放下执着就会安乐。
 - 但什么是执着？怎样才算放下？安乐，说到底，是一种心的感受。
@@ -70,6 +79,7 @@ comments: true
 把快乐寄托在向外驰求上，就像喝盐水解渴一样，得到的越多越不满足。
 
 ## 自律
+-----------------------------------
 
 - 修行不是去追求神秘的体验或获得某种超常的功能。
 - 修行是修养仁爱、宽容、谦让、与人为善等精神品质，也就是要关注其他生命的福祉，并且自觉调整自身行为让其他众生感到安适快乐。
@@ -88,6 +98,7 @@ comments: true
 - 我们的目的是：不伤害。
 
 ## 皈依
+----------------------------------
 
 - 有的人居无定所地过着安宁的日子，有的人却在豪华住宅里一辈子逃亡。
 - 皈依，不是修行的起点，它是整个修行。
@@ -108,6 +119,7 @@ comments: true
 持续的觉察训练，会让我们逐渐习惯这种不迎不拒的做法。
 
 ## 出离
+---------------------------------
 
 轮回是一种惯性，不断改变习惯，就能让那股巨大的惯性慢慢地停下来。现在就开始改变这些习惯，这就是出离。
 
@@ -133,6 +145,7 @@ comments: true
 
  
 ## 菩提心
+---------------------------------
 
 佛教徒是决心与自己亲密相处的人。亲密相处有两层含义
 
@@ -156,6 +169,7 @@ comments: true
 
 
 ## 六度
+---------------------------------
 
 六度，梵语称六波罗蜜，意为“渡到彼岸”。
 
