--- a/_posts/project/2015-09-01-Backup.md
+++ b/_posts/project/2015-09-01-Backup.md
@@ -1,10 +1,11 @@
 ---
 layout: post
-title: 2015-09-01 Backup
+title: Backup
 date: 2015-09-01
 excerpt: "Backup项目总结"
 project: true
 tags: [Projects]
+categories: Projects
 comments: true
 ---
 
