--- a/_posts/project/2016-11-01-ZenTalk.md
+++ b/_posts/project/2016-11-01-ZenTalk.md
@@ -1,9 +1,10 @@
 ---
 layout: post
-title: 2016-11-01 ZenTalk
+title: ZenTalk
 date: 2016-11-01
 excerpt: "ZenTalk项目总结"
 project: true
+categories: Projects
 tags: [Projects]
 comments: true
 ---
