--- a/_posts/books/生活/2017-03-02-Books-次第花开.md
+++ b/_posts/books/生活/2017-03-02-Books-次第花开.md
@@ -47,7 +47,7 @@ comments: true
 - 面对无常，观察它，你才会发现不是只有自己在失去、在衰老、会生病、经历挫折、没有安全感。
 - 熟悉无常令我们内心真正放松而开阔，另一个好处是我们因此而更加珍惜人生，懂得修行佛法的意义。
 
-## 人身难得
+# 人身难得
 -----------------------------------
 
 - 生老病死、悲欢离合、幸福的、悲惨的、成功的、潦倒的，人生的种种经历，无一不在启发我们觉悟。
@@ -58,7 +58,7 @@ comments: true
 
 若善用此人身，即身即可解脱。
 
-## 安乐
+# 安乐
 ----------------------------------
 
 - 放下执着就会安乐。
@@ -78,7 +78,7 @@ comments: true
 
 把快乐寄托在向外驰求上，就像喝盐水解渴一样，得到的越多越不满足。
 
-## 自律
+# 自律
 -----------------------------------
 
 - 修行不是去追求神秘的体验或获得某种超常的功能。
@@ -97,7 +97,7 @@ comments: true
 - 自律不是压抑情感，而是考虑他人的感受。
 - 我们的目的是：不伤害。
 
-## 皈依
+# 皈依
 ----------------------------------
 
 - 有的人居无定所地过着安宁的日子，有的人却在豪华住宅里一辈子逃亡。
@@ -118,7 +118,7 @@ comments: true
 
 持续的觉察训练，会让我们逐渐习惯这种不迎不拒的做法。
 
-## 出离
+# 出离
 ---------------------------------
 
 轮回是一种惯性，不断改变习惯，就能让那股巨大的惯性慢慢地停下来。现在就开始改变这些习惯，这就是出离。
@@ -144,7 +144,7 @@ comments: true
 - 习惯让我们看上去像个傻瓜。现在就开始改变这些习惯，这就是出离。
 
  
-## 菩提心
+# 菩提心
 ---------------------------------
 
 佛教徒是决心与自己亲密相处的人。亲密相处有两层含义
@@ -168,7 +168,7 @@ comments: true
 这就是慈悲喜舍，四无量心。
 
 
-## 六度
+# 六度
 ---------------------------------
 
 六度，梵语称六波罗蜜，意为“渡到彼岸”。
