--- a/_posts/books/工作/2016-07-15-Book-给你一步手机-你能怎么赚钱.md
+++ b/_posts/books/工作/2016-07-15-Book-给你一步手机-你能怎么赚钱.md
@@ -1,8 +1,9 @@
 ---
 layout: post
-title: 2016-07-15 《给你一步手机，你能怎么赚钱》
+title: 《给你一步手机，你能怎么赚钱》
 date: 2016-07-15
 excerpt: "《给你一步手机，你能怎么赚钱》"
+categories: 读书
 tags: [读书]
 comments: true
 ---
