--- a/_posts/books/工作/2016-11-11-Books-刻意练习.md
+++ b/_posts/books/工作/2016-11-11-Books-刻意练习.md
@@ -1,8 +1,9 @@
 ---
 layout: post
-title: 2016-11-11 《刻意练习》
+title: 《刻意练习》
 date: 2016-11-11
 excerpt: "《刻意练习》"
+categories: 读书
 tags: [读书]
 comments: true
 ---
