--- a/_posts/books/工作/2016-11-24-Books-商业的本质.md
+++ b/_posts/books/工作/2016-11-24-Books-商业的本质.md
@@ -1,8 +1,9 @@
 ---
 layout: post
-title: 2016-11-24 《商业的本质》
+title: 《商业的本质》
 date: 2016-11-24
 excerpt: "《商业的本质》"
+categories: 读书
 tags: [读书]
 comments: true
 ---
