--- a/_posts/books/工作/2017-01-04-Books-超级个体.md
+++ b/_posts/books/工作/2017-01-04-Books-超级个体.md
@@ -1,8 +1,9 @@
 ---
 layout: post
-title: 2017-01-04 古典的演讲-超级个体
+title: 古典的演讲-超级个体
 date: 2017-01-04
 excerpt: "古典的演讲-超级个体"
+categories: 读书
 tags: [读书]
 comments: true
 ---
