--- a/_posts/books/工作/2016-11-03-Books-联盟雇主与员工的新型关系.md
+++ b/_posts/books/工作/2016-11-03-Books-联盟雇主与员工的新型关系.md
@@ -1,8 +1,9 @@
 ---
 layout: post
-title: 2016-11-03 联盟雇主与员工的新型关系
+title: 联盟雇主与员工的新型关系
 date: 2016-11-03
 excerpt: "联盟雇主与员工的新型关系"
+categories: 读书
 tags: [读书]
 comments: true
 ---
