--- a/_posts/books/工作/2016-11-29-Books-斯坦福大学最受欢迎的创意课.md
+++ b/_posts/books/工作/2016-11-29-Books-斯坦福大学最受欢迎的创意课.md
@@ -1,8 +1,9 @@
 ---
 layout: post
-title: 2016-11-29 《斯坦福大学最受欢迎的创意课》
+title: 《斯坦福大学最受欢迎的创意课》
 date: 2016-11-29
 excerpt: "《斯坦福大学最受欢迎的创意课》"
+categories: 读书
 tags: [读书]
 comments: true
 ---
