--- a/_posts/books/工作/2016-12-16-Books-物联网畅想.md
+++ b/_posts/books/工作/2016-12-16-Books-物联网畅想.md
@@ -1,8 +1,9 @@
 ---
 layout: post
-title: 2016-12-16 物联网畅想
+title: 物联网畅想
 date: 2016-12-16
 excerpt: "物联网畅想"
+categories: 读书
 tags: [读书]
 comments: true
 ---
