--- a/_posts/books/工作/2016-12-28-Books-沃顿商学院最受欢迎的谈判课.md
+++ b/_posts/books/工作/2016-12-28-Books-沃顿商学院最受欢迎的谈判课.md
@@ -1,8 +1,9 @@
 ---
 layout: post
-title: 2016-12-28 《沃顿商学院最受欢迎的谈判课》
+title: 《沃顿商学院最受欢迎的谈判课》
 date: 2016-12-28
 excerpt: "《沃顿商学院最受欢迎的谈判课》"
+categories: 读书
 tags: [读书]
 comments: true
 ---
