--- a/_posts/books/工作/2017-02-10-Books-关键对话.md
+++ b/_posts/books/工作/2017-02-10-Books-关键对话.md
@@ -1,8 +1,9 @@
 ---
 layout: post
-title: 2017-02-10 《关键对话》
+title: 《关键对话》
 date: 2017-02-10
 excerpt: "《关键对话》"
+categories: 读书
 tags: [读书]
 comments: true
 ---
