--- a/_posts/books/工作/2017-03-20-Books-管理十诫.md
+++ b/_posts/books/工作/2017-03-20-Books-管理十诫.md
@@ -1,8 +1,9 @@
 ---
 layout: post
-title: 2017-02-20 《管理十诫》
+title: 《管理十诫》
 date: 2017-02-20
 excerpt: "《管理十诫》"
+categories: 读书
 tags: [读书]
 comments: true
 ---
