--- a/_posts/books/教育/2016-11-20-Books-养育男孩.md
+++ b/_posts/books/教育/2016-11-20-Books-养育男孩.md
@@ -1,8 +1,9 @@
 ---
 layout: post
-title: 2016-11-20 《养育男孩》
+title: 《养育男孩》
 date: 2016-11-20
 excerpt: "《养育男孩》"
+categories: 读书
 tags: [读书]
 comments: true
 ---
