--- a/_posts/books/教育/2016-12-16-Books-不吼不叫-如何平静地让孩子与父母合作.md
+++ b/_posts/books/教育/2016-12-16-Books-不吼不叫-如何平静地让孩子与父母合作.md
@@ -1,8 +1,9 @@
 ---
 layout: post
-title: 2016-12-16 《不吼不叫，如何平静地让孩子与父母合作》
+title: 《不吼不叫，如何平静地让孩子与父母合作》
 date: 2016-12-16
 excerpt: "《不吼不叫，如何平静地让孩子与父母合作》"
+categories: 读书
 tags: [读书]
 comments: true
 ---
