--- a/_posts/books/教育/2016-12-16-Books-如何培养孩子的社会能力.md
+++ b/_posts/books/教育/2016-12-16-Books-如何培养孩子的社会能力.md
@@ -1,8 +1,9 @@
 ---
 layout: post
-title: 2016-12-16 《如何培养孩子的社会能力》
+title: 《如何培养孩子的社会能力》
 date: 2016-12-16
 excerpt: "《如何培养孩子的社会能力》"
+categories: 读书
 tags: [读书]
 comments: true
 ---
