--- a/_posts/books/生活/2016-12-01-Books-哈弗大学积极的环境能改变人.md
+++ b/_posts/books/生活/2016-12-01-Books-哈弗大学积极的环境能改变人.md
@@ -1,8 +1,9 @@
 ---
 layout: post
-title: 2016-12-01 哈弗大学《积极的环境能改变人》
+title: 哈弗大学《积极的环境能改变人》
 date: 2016-12-01
 excerpt: "哈弗大学《积极的环境能改变人》"
+categories: 读书
 tags: [读书]
 comments: true
 ---
