--- a/_posts/books/生活/2017-02-22-Books-看清你的一生.md
+++ b/_posts/books/生活/2017-02-22-Books-看清你的一生.md
@@ -1,8 +1,9 @@
 ---
 layout: post
-title: 2017-02-22 看清你的一生
+title: 看清你的一生
 date: 2017-02-22
 excerpt: "See Your Lifetime Clearly"
+categories: 读书
 tags: [读书]
 comments: true
 ---
