--- a/_posts/books/生活/2017-03-20-Books-如何衡量自己的人生.md
+++ b/_posts/books/生活/2017-03-20-Books-如何衡量自己的人生.md
@@ -1,8 +1,9 @@
 ---
 layout: post
-title: 2017-02-20 《如何衡量自己的人生》
+title: 《如何衡量自己的人生》
 date: 2017-02-20
 excerpt: "《如何衡量自己的人生》"
+categories: 读书
 tags: [读书]
 comments: true
 ---
