--- a/_posts/books/生活/2017-03-20-Books-第三选择.md
+++ b/_posts/books/生活/2017-03-20-Books-第三选择.md
@@ -1,8 +1,9 @@
 ---
 layout: post
-title: 2017-02-20 《第三选择》
+title: 《第三选择》
 date: 2017-02-20
 excerpt: "《第三选择》"
+categories: 读书
 tags: [读书]
 comments: true
 ---
