--- a/_posts/books/教育/2016-11-19-Books-你就是孩子最好的玩具.md
+++ b/_posts/books/教育/2016-11-19-Books-你就是孩子最好的玩具.md
@@ -1,8 +1,9 @@
 ---
 layout: post
-title: 2016-11-19 《你就是孩子最好的玩具》
+title: 《你就是孩子最好的玩具》
 date: 2016-11-19
 excerpt: "《你就是孩子最好的玩具》"
+categories: 读书
 tags: [读书]
 comments: true
 ---
