--- a/_posts/books/教育/2016-12-14-Books-如何说孩子才会听-怎么听孩子才会说.md
+++ b/_posts/books/教育/2016-12-14-Books-如何说孩子才会听-怎么听孩子才会说.md
@@ -1,8 +1,9 @@
 ---
 layout: post
-title: 2016-12-14 《如何说孩子才会听，怎么听孩子才会说》
+title: 《如何说孩子才会听，怎么听孩子才会说》
 date: 2016-12-14
 excerpt: "《如何说孩子才会听，怎么听孩子才会说》"
+categories: 读书
 tags: [读书]
 comments: true
 ---
