--- a/_posts/books/教育/2017-02-28-Books-让孩子远离焦虑.md
+++ b/_posts/books/教育/2017-02-28-Books-让孩子远离焦虑.md
@@ -1,8 +1,9 @@
 ---
 layout: post
-title: 2017-02-28 《让孩子远离焦虑》
+title: 《让孩子远离焦虑》
 date: 2017-02-28
 excerpt: "《让孩子远离焦虑》"
+categories: 读书
 tags: [读书]
 comments: true
 ---
