--- a/_posts/books/生活/2017-02-24-Books-幸福的婚姻.md
+++ b/_posts/books/生活/2017-02-24-Books-幸福的婚姻.md
@@ -1,8 +1,9 @@
 ---
 layout: post
-title: 2017-02-24 《幸福的婚姻》
+title: 《幸福的婚姻》
 date: 2017-02-24
 excerpt: "《幸福的婚姻》"
+categories: 读书
 tags: [读书]
 comments: true
 ---
