--- a/_posts/reactnative/2016-06-15-redux.md
+++ b/_posts/reactnative/2016-06-15-redux.md
@@ -3,6 +3,7 @@ layout: post
 title: ReactNative 之搭配框架 Redux
 date: 2016-09-23
 excerpt: "Redux 状态管理框架"
+categories: ReactNative
 tags: [ReactNative]
 comments: true
 ---
