--- a/_posts/reactnative/component/2016-05-25-rn-Hello.md
+++ b/_posts/reactnative/component/2016-05-25-rn-Hello.md
@@ -3,6 +3,7 @@ layout: post
 title: ReactNative 学习笔记 初战
 date: 2016-05-25
 excerpt: "ReactNative 初战"
+categories: ReactNative
 tags: [ReactNative]
 comments: true
 ---
