--- a/_posts/reactnative/test/2016-06-30-rn-eslint.md
+++ b/_posts/reactnative/test/2016-06-30-rn-eslint.md
@@ -3,6 +3,7 @@ layout: post
 title: ReactNative 之 Test ESLint
 date: 2016-05-25
 excerpt: "ESLint"
+categories: ReactNative
 tags: [ReactNative]
 comments: true
 ---
